# traffic-demo

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
docs/: traffic-analyzer-architecture-memo.md  traffic-analyzer-one-pager.md
src/traffic_simulator/: __init__.py  ai_analyst.py  api.py  config.py  controllers.py  db.py  dev_servers.py  domain.py  models.py  networks.py  persistence.py  scenarios.py  schemas.py  services.py  simulator.py  streamlit_app.py  ui_text.py
src/traffic_simulator/frontend/: app.js  architecture.html  architecture.js  index.html  styles.css
tests/: conftest.py  test_controllers.py  test_integration.py  test_scenarios.py
