[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-digital-twin"
version = "0.1.0"
description = "Traffic digital twin take-home prototype with deterministic fallback simulation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic>=2.6,<3",
  "networkx>=3.2,<4",
  "streamlit>=1.32,<2",
  "httpx>=0.27,<1",
  "pillow>=10,<12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
osm = [
  "osmnx>=2.0,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
